# python-security-log-analyzer

./: .gitignore  README.md  pyproject.toml
docs/: 01_project_overview.md  02_lab_environment.md  03_data_acquisition.md  04_parser_pipeline.md  05_detection_engine.md  06_results_and_findings.md
src/loganalyzer/: cli.py  detectors.py  parser.py
